# Azart

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/nativelib/: build.gradle
app/nativelib/src/main/cpp/: CMakeLists.txt  azart_proto_cl.cpp  azart_proto_cl.h  native-lib.cpp
app/nativelib/src/main/cpp/include/: azart_proto_cl.h
app/nativelib/src/main/java/com/example/nativelib/: AzartBluetooth.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/myapplication/: MainActivity.kt  SelectBluetoothFragment.kt
app/src/main/java/com/example/myapplication/bluetooth/: BluetoothActivityListener.kt  BluetoothCallback.kt  BluetoothConnection.kt  BluetoothHandler.kt  BluetoothHandlerImpl.kt  BluetoothListitem.kt  BluetoothReceiver.kt  BluetoothRecyclerViewAdapter.kt  ConnectThread.kt  ConnectionBluetoothObject.kt
app/src/main/java/com/example/myapplication/utils/: PermissionTools.kt
app/src/main/res/layout/: activity_main.xml  bluetooth_list_item.xml  fragment_select_bluetooth.xml
gradle/wrapper/: gradle-wrapper.properties
